add learnerDAO and method CRUD